plugins {
	id 'org.springframework.boot' version '2.6.2'
	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
	id 'java'
	id 'org.openjfx.javafxplugin' version '0.0.10'
	id "io.freefair.lombok" version "6.3.0"
}

group = 'me.jvegaf'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

repositories {
	mavenCentral()
	maven {
		url "https://jitpack.io"
	}
}

javafx {
	version = "17"
	modules = [ 'javafx.controls', 'javafx.media',  'javafx.graphics', 'javafx.fxml' ]
}

dependencies {
    implementation 'org.hibernate:hibernate-core:5.4.9.Final'
    implementation 'org.springframework:spring-orm:5.2.2.RELEASE'
    implementation 'org.xerial:sqlite-jdbc:3.36.0.3'
    implementation 'org.springframework:spring-context-support:5.2.1.RELEASE'
    implementation 'io.github.cdimascio:dotenv-java:2.2.3'
	implementation 'org.jsoup:jsoup:1.14.3'
	implementation 'org:jaudiotagger:2.0.3'
	implementation 'com.google.code.gson:gson:2.8.9'
    implementation 'net.sourceforge.htmlunit:htmlunit:2.56.0'
	implementation 'org.reflections:reflections:0.10.2'
	implementation 'fr.brouillard.oss:cssfx:11.5.0'
	implementation 'org.springframework.boot:spring-boot-starter'
	implementation 'net.rgielen:javafx-weaver-spring-boot-starter:1.3.0'
	implementation 'log4j:log4j:1.2.17'
    implementation 'com.google.guava:guava:31.0.1-jre'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.1'
	implementation 'com.fasterxml.jackson.core:jackson-core:2.13.1'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

test {
	useJUnitPlatform()
}
